# PSG4D

./: .gitignore  README.md
2d/scripts/: pvsg_demo_fine_tune_cls_only.sh  pvsg_demo_test_default_config_tracking_save_qf.sh  pvsg_demo_train_default_config_slurm.sh
2d/tools/: qf_tube_assign_label_summarize.ipynb  test.py  (+2 more)
3d_seg/: LICENSE  README.md  requirements.txt  test_epoch.py  test_epoch_hoi4d.py  test_epoch_sailvos3d.py  test_sailvos3d.py  train_hoi4d.py  train_sailvos3d.py
instance_mapping/: Apartment_release_golden_skeleton_seq100.json  Apartment_release_multiskeleton_party_seq112.json  Apartment_release_multiskeleton_party_seq117.json  Apartment_release_multiuser_clean_seq115.json  Apartment_release_multiuser_cook_seq142.json  Apartment_release_multiuser_cook_seq144.json  Apartment_release_multiuser_cook_seq146.json  Apartment_release_multiuser_cook_seq150.json  Apartment_release_multiuser_meal_seq139.json  Apartment_release_multiuser_party_seq131.json  Apartment_release_multiuser_party_seq134.json  Apartment_release_multiuser_party_seq135.json  Apartment_release_multiuser_party_seq140.json
models/: __init__.py
pc_seg/: .gitignore  README.md  environment.yml  test_hoi4d.py  test_sailvos3d.py  train_hoi4d.py  train_sailvos3d.py
pc_seg/lib/segmentator/csrc/: CMakeLists.txt
pc_track/: test_query_tube_dknet.py
relation_head/: README.md
rgbd_seg/: README.md
rgbd_track/: README.md
scripts/: pvsg_demo_fine_tune_all.sh  pvsg_demo_fine_tune_cls_mask.sh  test_tune_cls_mask.sh  test_tune_default.sh
tools/: qt_gt_post_match.ipynb  visualize.py
(+165 files in other folders)
